tweaks and added icons and comments

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -31,6 +31,19 @@
   height: auto;
 }
 
+.footer .map-link {
+
+}
+
+.footer a.map-link:after {
+  background: transparent url("./../images/external-link.svg") 0 0 no-repeat;
+  background-size: 18px;
+  content: "";
+  height: 16px;
+  margin-left: 3px;
+  width: 16px;
+  display: inline-block;
+}
 
 /** Responsive **/
 
